--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-<h1>hello world </h1>
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Telegram Bot -  IT seminar 2019 </title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+
+
+    <!-- Custom styles for this template -->
+    <style>
+      body {
+        padding-top: 54px;
+      }
+      @media (min-width: 992px) {
+        body {
+          padding-top: 56px;
+        }
+      }
+
+    </style>
+
+  </head>
+
+  <body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#main">Telegram Bot -  IT seminar 2019</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#Telegram"><i class="fa fa-paper-plane"></i> Telegram</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Installation"><i class="fa fa-cog"></i> Installation</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="#Tutorial"><i class="fa fa-eye"></i> Tutorial</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="#Run"><i class="fa fa-space-shuttle"></i> Run your bot</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+	 <!-- Bootstrap core JavaScript -->
+    <script src="assets/vendor/jquery/jquery.min.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  </body>
+
+</html>
